--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,14 @@
     <string name="matches">Matches</string>
     <string name="clubs">Clubs</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="club_name">Club name</string>
+    <string name="dash">-</string>
+    <string name="matchDate">Match date</string>
+    <string name="home_team">Home Team</string>
+    <string name="away_team">Away Team</string>
+    <string name="name_of_the_club">Name of the club</string>
+    <string name="playtime">play Time</string>
+    <string name="odds_draw">Odds draw</string>
+    <string name="odds_home">Odds home</string>
+    <string name="odds_away">Odds away</string>
 </resources>
