--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="odds_draw">Odds draw</string>
     <string name="odds_home">Odds home</string>
     <string name="odds_away">Odds away</string>
+    <string name="my_matches">My Matches</string>
 </resources>
