--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="odds_home">Odds home</string>
     <string name="odds_away">Odds away</string>
     <string name="my_matches">My Matches</string>
+    <string name="pick_image">Pick image</string>
 </resources>
